# BEARR

./: .gitignore  Cargo.toml  DOCKERFILE  Dockerfile  LICENSE  README.md  \  bench_get.csv  bloom_bits.py  run_experiments.sh
.github/workflows/: test.yml
bench_concurrent_get_db/: config.json  metadata.json
database_test_files/basic/: 0  1  2  config.json  metadata.json
database_test_files/persistence/: 0  1  2  3  4  config.json  metadata.json
db/1/: data-lsm0-sst1
db/2/: data-lsm0-sst2
db/3/: data-lsm0-sst3
db/4/: data-lsm0-sst4
proptest-regressions/: db_scan.txt
src/: bloom_filter.rs  btree.rs  database.rs  db_scan.rs  error.rs  eviction.rs  experiments.rs  file_system.rs  hash.rs  hashtable.rs  lib.rs  list.rs  lsm.rs  memtable.rs  merge.rs  mock.rs  sst.rs  test_path.rs  test_util.rs  tests.rs
